# Rovio_NoRos

./: CMakeLists.txt  README.md  run.sh
cfg/: datasetConfig.yaml  datasetConfig.yaml~  rovio.info  rovio.info~
include/lightweight_filtering/: FilterState.hpp  State.hpp  Update.hpp
include/rovio/: FilterStates.hpp  ImgUpdate.hpp  ImuPrediction.hpp  Parameters.hpp  RovioFilter.hpp  RovioNode_noros.hpp  Struct_definition.hpp  featureTracker.hpp
lightweight_filtering/: CMakeLists.txt  CMakeLists.txt~
lightweight_filtering/cmake/: FindLWF.cmake
lightweight_filtering/include/lightweight_filtering/: CoordinateTransform.hpp  FilterBase.hpp  GIFPrediction.hpp  OutlierDetection.hpp  Prediction.hpp  SigmaPoints.hpp
src/: Struct_definition.cpp  rovio_node.cpp  rovio_pipeline.cpp
